--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="new">
                 <img  src="./img/balestra.png" alt="balestra">
         <h2>
-        Besta balestra 
+        Besta balestrawwx 
         </h2>
         <p>
             Equip. Táticos, Zarabatana, Besta, Atiradeira.
